--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://nilbogcoffee.pythonanywhere.com",
   "dependencies": {
     "@emotion/react": "^11.10.8",
     "@emotion/styled": "^11.10.8",
@@ -21,7 +20,7 @@
   "scripts": {
     "start": "react-scripts start",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d built",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
